--- a/build.gradle
+++ b/build.gradle
@@ -72,6 +72,9 @@ dependencies {
   compile 'org.apache.commons:commons-collections4:4.0'
   
   compile 'edu.stanford.nlp:stanford-parser:3.6.0'
+  
+  compile group: 'com.jcraft', name: 'jsch', version: '0.1.54'
+  
 }
 
 test {
